updated javascript to new patterns

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -242,17 +242,18 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="ScreenShots\160410a-instArranger-ScreenShot.PNG" />
-    <Content Include="Scripts\app\editor.helper.js" />
+    <Content Include="Scripts\app\editor.namespace.js" />
+    <Content Include="Scripts\app\html.js" />
     <Content Include="Scripts\Editor\index.js" />
-    <Content Include="Scripts\app\FieldsExtractor.js" />
-    <Content Include="Scripts\app\Song.js" />
-    <Content Include="Scripts\app\SongFormatter.js" />
-    <Content Include="Scripts\app\SongTemplateHtml.js" />
-    <Content Include="Scripts\app\StanzaExtractor.js" />
-    <Content Include="Scripts\app\StanzaFormatter.js" />
-    <Content Include="Scripts\app\StanzaLineFormatter.js" />
-    <Content Include="Scripts\app\StanzaMeasureFormatter.js" />
-    <Content Include="Scripts\app\StringExtensions.js" />
+    <Content Include="Scripts\app\song.FieldsExtractor.js" />
+    <Content Include="Scripts\app\song.Song.js" />
+    <Content Include="Scripts\app\song.SongFormatter.js" />
+    <Content Include="Scripts\app\song.SongTemplateHtml.js" />
+    <Content Include="Scripts\app\song.StanzaExtractor.js" />
+    <Content Include="Scripts\app\song.StanzaFormatter.js" />
+    <Content Include="Scripts\app\song.StanzaLineFormatter.js" />
+    <Content Include="Scripts\app\song.StanzaMeasureFormatter.js" />
+    <Content Include="Scripts\app\song.StringExtensions.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
